Insertion, retrieving names added

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -17,7 +17,7 @@
         <!-- internal dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>module</artifactId>
+            <artifactId>model-module</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
@@ -47,6 +47,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
 
