--- a/web/pom.xml
+++ b/web/pom.xml
@@ -8,9 +8,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>web-module</artifactId>
-
+    <packaging>jar</packaging>
 
     <dependencies>
 
@@ -48,8 +47,6 @@
             <scope>test</scope>
         </dependency>
 
-
     </dependencies>
-
 
 </project>
