--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Datasource configuration
 spring.datasource.url=jdbc:mysql://localhost/dictionary
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=dictionary
+spring.datasource.password=dictionary
 spring.datasource.test-on-borrow=true
 spring.datasource.test-while-idle=true
 spring.datasource.validation-query=SELECT 1;
