--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>org.yorubaname.dictionary.DictionaryApplication</start-class>
+		<start-class>org.oruko.dictionary.DictionaryApplication</start-class>
 		<java.version>1.8</java.version>
 	</properties>
 
