WIP adding the importer

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<modules>
 		<module>model</module>
 		<module>web</module>
+		<module>importer</module>
 	</modules>
 	<packaging>pom</packaging>
 
@@ -99,6 +100,16 @@
 				<version>5.1.3.Final</version>
 			</dependency>
 
+			<!--<dependency>-->
+				<!--<groupId>org.apache.poi</groupId>-->
+				<!--<artifactId>poi</artifactId>-->
+				<!--<version>3.11</version>-->
+			<!--</dependency>-->
+			<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi-ooxml</artifactId>
+				<version>3.11</version>
+			</dependency>
 		</dependencies>
 
 	</dependencyManagement>
