--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>model</module>
 		<module>web</module>
 		<module>importer</module>
+		<module>dashboard</module>
 	</modules>
 	<packaging>pom</packaging>
 
@@ -68,13 +69,6 @@
 			<!--<artifactId>spring-boot-starter-remote-shell</artifactId>-->
 			<!--<version>1.2.1.RELEASE</version>-->
 			<!--</dependency>-->
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-test</artifactId>
-				<version>1.2.1.RELEASE</version>
-				<scope>test</scope>
-			</dependency>
-
 
 			<dependency>
 				<groupId>mysql</groupId>
@@ -109,6 +103,28 @@
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi-ooxml</artifactId>
 				<version>3.11</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>18.0</version>
+			</dependency>
+
+
+			<!-- Test dependencies -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-test</artifactId>
+				<version>1.2.1.RELEASE</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-all</artifactId>
+				<version>1.3</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 
