--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.test-on-borrow=true
 spring.datasource.test-while-idle=true
 spring.datasource.validation-query=SELECT 1;
 spring.datasource.initial-size=2
+spring.datasource.sql-script-encoding=UTF-8
 
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
