removed module definition that is no longer in use. Return error message when name not found

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
