--- a/web/src/main/resources/public/dashboardapp/package.json
+++ b/web/src/main/resources/public/dashboardapp/package.json
@@ -8,7 +8,6 @@
     "grunt-autoprefixer": "^2.0.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compass": "^1.0.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
@@ -27,7 +26,12 @@
     "grunt-wiredep": "^2.0.0",
     "jshint-stylish": "^1.0.0",
     "load-grunt-tasks": "^3.1.0",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.0.0",
+    "grunt-karma": "~0.10.1",
+    "jasmine-core": "~2.2.0",
+    "karma": "~0.12.31",
+    "karma-jasmine": "~0.3.5",
+    "karma-phantomjs-launcher": "~0.1.4"
   },
   "engines": {
     "node": ">=0.10.0"
