--- a/dashboard/src/main/resources/dashboard-client/package.json
+++ b/dashboard/src/main/resources/dashboard-client/package.json
@@ -31,7 +31,8 @@
     "jasmine-core": "~2.2.0",
     "karma": "~0.12.31",
     "karma-jasmine": "~0.3.5",
-    "karma-phantomjs-launcher": "~0.1.4"
+    "karma-phantomjs-launcher": "~0.1.4",
+    "grunt-cli": "~0.1.13"
   },
   "engines": {
     "node": ">=0.10.0"
