--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>model</module>
 		<module>web</module>
 		<module>importer</module>
+		<module>dashboard</module>
 	</modules>
 	<packaging>pom</packaging>
 
@@ -27,6 +28,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>org.oruko.dictionary.DictionaryApplication</start-class>
+		<main.basedir>${project.basedir}</main.basedir>
 		<java.version>1.8</java.version>
 	</properties>
 
@@ -128,12 +130,6 @@
 		</dependencies>
 
 	</dependencyManagement>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+
+
 </project>
