--- a/web/pom.xml
+++ b/web/pom.xml
@@ -26,7 +26,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.yorubaname</groupId>
+            <artifactId>dashboard-module</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <!--<dependency>-->
         <!--<groupId>org.springframework.boot</groupId>-->
@@ -59,7 +63,42 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>0.0.16</version>
+                <configuration>
+                    <workingDirectory>${main.basedir}/../dashboard/src/main/resources/dashboard-client</workingDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>install node and npm</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                        <configuration>
+                            <nodeVersion>v0.10.18</nodeVersion>
+                            <npmVersion>1.3.8</npmVersion>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>grunt build</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>grunt</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>spring-boot-build --target=${basedir}/src/main/resources/static/dashboardapp</arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
