--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>web</module>
 		<module>importer</module>
 		<module>dashboard</module>
+		<module>auth</module>
 	</modules>
 	<packaging>pom</packaging>
 
@@ -30,6 +31,13 @@
 		<start-class>org.oruko.dictionary.DictionaryApplication</start-class>
 		<main.basedir>${project.basedir}</main.basedir>
 		<java.version>1.8</java.version>
+		<spring-boot.version>1.2.1.RELEASE</spring-boot.version>
+		<mysql-connector.version>5.1.34</mysql-connector.version>
+		<jackson-core.version>2.5.1</jackson-core.version>
+		<logback-classic.version>1.1.2</logback-classic.version>
+		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
+		<poi-ooxml.version>3.11</poi-ooxml.version>
+		<guava.version>18.0</guava.version>
 	</properties>
 
 
@@ -39,65 +47,64 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-data-jpa</artifactId>
-				<version>1.2.1.RELEASE</version>
+				<version>${spring-boot.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-web</artifactId>
-				<version>1.2.1.RELEASE</version>
+				<version>${spring-boot.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-freemarker</artifactId>
-				<version>1.2.1.RELEASE</version>
+				<version>${spring-boot.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-actuator</artifactId>
-				<version>1.2.1.RELEASE</version>
+				<version>${spring-boot.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
-				<version>5.1.34</version>
+				<version>${mysql-connector.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-core</artifactId>
-				<version>2.5.1</version>
+				<version>${jackson-core.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.1.2</version>
+				<version>${logback-classic.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-validator</artifactId>
-				<version>5.1.3.Final</version>
+				<version>${hibernate-validator.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi-ooxml</artifactId>
-				<version>3.11</version>
+				<version>${poi-ooxml.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>18.0</version>
+				<version>${guava.version}</version>
 			</dependency>
-
 
 			<!-- Test dependencies -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-test</artifactId>
-				<version>1.2.1.RELEASE</version>
+				<version>${spring-boot.version}</version>
 				<scope>test</scope>
 			</dependency>
 
@@ -110,6 +117,4 @@
 		</dependencies>
 
 	</dependencyManagement>
-
-
 </project>
