#4 various changes of which a chunk is regarding authentication

--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -14,8 +14,31 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+
+        <!-- TODO ideally the starter-web dependency should not be needed in auth module-->
+        <!-- TODO or better still merge the auth module to the web module? why have authentication as a sepeate module? -->
+        <!-- It is currently needed because the spring security configuration extends the spring mvc security config -->
+        <!-- Look into fixing this -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
     </dependencies>
 
 </project>
