--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -30,6 +30,6 @@ logging.file=/var/log/yorubaname.log
 logging.level.org.springframework.web: INFO
 logging.level.org.hibernate: INFO
 
-#Security
-#security.user.name=
-#security.user.password=
+##Security
+#security.user.name=admin
+#security.user.password=admin
