#5 Fixed a TODO about externalizing how the column order is specified

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -33,3 +33,6 @@ logging.level.org.hibernate: INFO
 ##Security
 #security.user.name=admin
 #security.user.password=admin
+
+# specify the expected column order in spreadsheet used for bulk name uploadds
+nameentry.column.order=name,tone,meaning,morphology,location
