--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -36,3 +36,9 @@ logging.level.org.hibernate: INFO
 
 # specify the expected column order in spreadsheet used for bulk name uploadds
 nameentry.column.order=name,tone,meaning,morphology,location
+
+# ElasticSearch
+
+es.clustername=nameentry
+es.hostname=localhost
+es.portnumber=9500
