--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>importer</module>
         <module>dashboard</module>
         <module>auth</module>
+        <module>elasticsearch</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -39,6 +40,7 @@
         <hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
         <poi-ooxml.version>3.11</poi-ooxml.version>
         <guava.version>18.0</guava.version>
+        <es.version>1.5.0</es.version>
     </properties>
 
     <dependencyManagement>
@@ -73,6 +75,11 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.elasticsearch</groupId>
+                <artifactId>elasticsearch</artifactId>
+                <version>${es.version}</version>
             </dependency>
 
             <dependency>
