#10 Added endpoint to add/delete name entries to/from ES index

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -39,6 +39,8 @@ nameentry.column.order=name,tone,meaning,morphology,location
 
 # ElasticSearch
 
-es.clustername=nameentry
+es.clustername=yoruba_name_dictionary
+es.indexname=dictionary
+es.documenttype=nameentry
 es.hostname=localhost
-es.portnumber=9500
+es.portnumber=9300
