--- a/dashboard/src/main/resources/dashboard-client/bower.json
+++ b/dashboard/src/main/resources/dashboard-client/bower.json
@@ -1,20 +1,25 @@
 {
-  "name": "dashboardapp",
-  "version": "0.0.0",
-  "dependencies": {
-    "angular": "^1.3.0",
-    "bootstrap": "^3.2.0",
-    "angular-animate": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0",
-    "angular-ui-router": "~0.2.13"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.3.0"
-  },
-  "appPath": "app",
-  "moduleName": "dashboardappApp"
+    "name": "dashboardapp",
+    "version": "0.0.0",
+    "dependencies": {
+        "angular": "^1.3.0",
+        "bootstrap": "^3.2.0",
+        "angular-animate": "^1.3.0",
+        "angular-cookies": "^1.3.0",
+        "angular-resource": "^1.3.0",
+        "angular-route": "^1.3.0",
+        "angular-sanitize": "^1.3.0",
+        "angular-touch": "^1.3.0",
+        "angular-ui-router": "~0.2.13",
+        "ng-tags-input": "~2.3.0",
+        "angular-bootstrap": "0.12.1"
+    },
+    "devDependencies": {
+        "angular-mocks": "^1.3.0"
+    },
+    "appPath": "app",
+    "moduleName": "dashboardappApp",
+    "resolutions": {
+        "angular": ">=1 <1.3.0"
+    }
 }
