--- a/dashboard/src/main/resources/dashboard-client/package.json
+++ b/dashboard/src/main/resources/dashboard-client/package.json
@@ -4,7 +4,7 @@
   "dependencies": {},
   "repository": {},
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "~0.4.5",
     "grunt-autoprefixer": "^2.0.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
@@ -25,7 +25,7 @@
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
     "jshint-stylish": "^1.0.0",
-    "load-grunt-tasks": "^3.1.0",
+    "load-grunt-tasks": "~3.1.0",
     "time-grunt": "^1.0.0",
     "grunt-karma": "~0.10.1",
     "jasmine-core": "~2.2.0",
