--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>dashboard</module>
         <module>auth</module>
         <module>elasticsearch</module>
+        <module>tts-module</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -51,6 +52,13 @@
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>springloaded</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
