--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <guava.version>18.0</guava.version>
         <es.version>1.5.0</es.version>
         <commons-io.version>2.4</commons-io.version>
+        <springfox-swagger>2.0.0</springfox-swagger>
     </properties>
 
     <dependencyManagement>
@@ -89,6 +90,17 @@
                 <groupId>org.elasticsearch</groupId>
                 <artifactId>elasticsearch</artifactId>
                 <version>${es.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${springfox-swagger}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${springfox-swagger}</version>
             </dependency>
 
             <dependency>
@@ -145,4 +157,12 @@
         </dependencies>
 
     </dependencyManagement>
+
+    <repositories>
+        <repository>
+            <id>jcenter-snapshots</id>
+            <name>jcenter</name>
+            <url>https://jcenter.bintray.com/</url>
+        </repository>
+    </repositories>
 </project>
