#5 switch templating to handlebars (from freemarker)

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -58,10 +58,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <groupId>pl.allegro.tech.boot</groupId>
+            <artifactId>spring-boot-starter-handlebars</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
