#5 renaming of modules and folders -- fix pom

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 
     <modules>
         <module>model</module>
-        <module>tts-module</module>
-        <module>web</module>
+        <module>tts</module>
+        <module>webapi</module>
         <module>importer</module>
         <module>dashboard</module>
         <module>auth</module>
