--- a/webapi/pom.xml
+++ b/webapi/pom.xml
@@ -8,8 +8,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>web-module</artifactId>
-    <packaging>war</packaging>
+    <artifactId>webapi-module</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
 
