--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -23,8 +23,13 @@ endpoints.shutdown.enabled=true
 #TODO have a seperate config file for production. For example you would want to turn on template cache in prod
 # Template (Handlebars)
 spring.handlebars.cache=false
-spring.handlebars.prefix: classpath:website/
-spring.handlebars.suffix: .hbs
+spring.handlebars.prefix:classpath:website/
+spring.handlebars.suffix:.hbs
+
+# i18n
+spring.messages.basename=messages
+spring.messages.cache-seconds=-1
+spring.messages.encoding=UTF-8
 
 # Logger
 logging.file=/var/log/yorubaname.log
