YOR-4 moved api endpoint to environment properties

--- a/dashboard/src/main/resources/dashboard-client/package.json
+++ b/dashboard/src/main/resources/dashboard-client/package.json
@@ -32,7 +32,8 @@
     "karma": "~0.12.31",
     "karma-jasmine": "~0.3.5",
     "karma-phantomjs-launcher": "~0.1.4",
-    "grunt-cli": "~0.1.13"
+    "grunt-cli": "~0.1.13",
+    "grunt-ng-constant": "~1.1.0"
   },
   "engines": {
     "node": ">=0.10.0"
