YOR-5 optimize dependencies configuration

--- a/elasticsearch/pom.xml
+++ b/elasticsearch/pom.xml
@@ -18,10 +18,14 @@
         </dependency>
 
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>model-module</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
         </dependency>
     </dependencies>
-
-
 </project>
