YOR-5 added some tests...added todo for tests on NameApi

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <commons-io.version>2.4</commons-io.version>
         <springfox-swagger>2.0.0</springfox-swagger>
         <spring-handlebars.version>0.1.1</spring-handlebars.version>
+        <json-path-assert.version>2.0.0</json-path-assert.version>
     </properties>
 
     <dependencyManagement>
@@ -154,6 +155,13 @@
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-all</artifactId>
                 <version>1.3</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.jayway.jsonpath</groupId>
+                <artifactId>json-path-assert</artifactId>
+                <version>${json-path-assert.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
