Added infrastructure to enable events...

--- a/elasticsearch/pom.xml
+++ b/elasticsearch/pom.xml
@@ -27,5 +27,10 @@
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 </project>
