updated location of application logs and added more test names including one with accents

--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
 
 # Logger
-logging.file=/var/log/yorubaname.log
+logging.file=../yorubaname.log
 
 #Logging
 logging.level.org.springframework.web: INFO
