YOR-49 Added endpoint for autocomplete

--- a/elasticsearch/src/main/resources/NameEntryElasticSearchMapping.json
+++ b/elasticsearch/src/main/resources/NameEntryElasticSearchMapping.json
@@ -4,6 +4,7 @@
       "type": "string",
       "store": "yes",
       "index": "analyzed",
+      "analyzer": "autocomplete_analyzer",
       "boost": "10"
     },
     "pronunciation": {
