YOR-58 changed to 1 shard and 0 replica since ES is embedded

--- a/elasticsearch/src/main/resources/NameEntryElasticSearchSettings.json
+++ b/elasticsearch/src/main/resources/NameEntryElasticSearchSettings.json
@@ -14,5 +14,7 @@
         "filter":[ "standard", "asciifolding", "lowercase", "stop", "edgeNGram" ]
       }
     }
-  }
+  },
+    "number_of_shards" :   1,
+    "number_of_replicas" : 0
 }
