YOR-58 switched the application properties for the host a lil

--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -15,7 +15,6 @@ spring.jpa.hibernate.ddl-auto=create
 
 
 #Server
-server.address=localhost
 server.port=8081
 server.tomcat.uri-encoding=UTF-8
 
@@ -58,3 +57,6 @@ es.portnumber=9300
 # the directory elasticsearch should store its data. If blank a data directory will be created in the directory
 # the application is running from and that will be used.
 es.data.path=
+
+# App settings
+app.host=localhost
