YOR-81 set ddl-auto to update for production

--- a/website/src/main/resources/application-prod.properties
+++ b/website/src/main/resources/application-prod.properties
@@ -13,7 +13,7 @@ spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 
 #TODO update before going live
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 #Server
