TODO fix. extracted the limit for recently index, recently searched and popular searched to the application.properties. Fixed an issue in the popular search where more than the limit is returned...added a test

--- a/website/src/main/resources/application-prod.properties
+++ b/website/src/main/resources/application-prod.properties
@@ -62,3 +62,6 @@ es.data.path=/data
 
 # App settings
 app.host=yorubaname.com
+app.search.recencyLimit=5
+app.search.popularListLimit=5
+app.search.recentIndexLimit=5
