--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -59,3 +59,6 @@ es.data.path=
 
 # App settings
 app.host=localhost
+app.search.recencyLimit=5
+app.search.popularListLimit=5
+app.search.recentIndexLimit=5
