Revert "Removed dashboard-module as a dependency of webapi-module"
This reverts commit 42cc953566af2b1e79bb9ba7e2f94ed2ab9a2c36.

--- a/webapi/pom.xml
+++ b/webapi/pom.xml
@@ -34,6 +34,12 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>dashboard-module</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>event-module</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
