In production use /home/dadepo/data for the elastic search index location

--- a/website/src/main/resources/application-prod.properties
+++ b/website/src/main/resources/application-prod.properties
@@ -12,9 +12,7 @@ spring.datasource.sql-script-encoding=UTF-8
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 
-#TODO update before going live
 spring.jpa.hibernate.ddl-auto=update
-
 
 #Server
 server.port=8081
@@ -22,7 +20,6 @@ server.tomcat.uri-encoding=UTF-8
 
 # Management
 endpoints.shutdown.enabled=false
-
 
 # Template (Handlebars)
 spring.handlebars.cache=true
@@ -58,7 +55,7 @@ es.hostname=localhost
 es.portnumber=9300
 # the directory elasticsearch should store its data. If blank a data directory will be created in the directory
 # the application is running from and that will be used.
-es.data.path=/data
+es.data.path=${HOME}/data
 
 # App settings
 app.host=yorubaname.com
