Cache static resource for 24hrs

--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -26,6 +26,9 @@ spring.handlebars.cache=false
 spring.handlebars.prefix:classpath:website/
 spring.handlebars.suffix:.hbs
 
+# Static resource
+spring.resources.cache-period=86400
+
 # i18n
 spring.messages.basename=messages
 spring.messages.cache-seconds=-1
