Expose the actuator endpoints via port 8888 on production

--- a/website/src/main/resources/application-prod.properties
+++ b/website/src/main/resources/application-prod.properties
@@ -20,6 +20,7 @@ server.tomcat.uri-encoding=UTF-8
 
 # Management
 endpoints.shutdown.enabled=false
+management.port=8888
 
 # Template (Handlebars)
 spring.handlebars.cache=true
