--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <poi-ooxml.version>3.11</poi-ooxml.version>
         <guava.version>18.0</guava.version>
         <es.version>1.5.0</es.version>
+        <elasticsearch-analysis-icu.version>2.5.0</elasticsearch-analysis-icu.version>
         <commons-io.version>2.4</commons-io.version>
         <springfox-swagger>2.2.2</springfox-swagger>
         <spring-handlebars.version>0.1.1</spring-handlebars.version>
@@ -101,6 +102,12 @@
                 <artifactId>elasticsearch</artifactId>
                 <version>${es.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.elasticsearch</groupId>
+                <artifactId>elasticsearch-analysis-icu</artifactId>
+                <version>${elasticsearch-analysis-icu.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
