Fix utf-8 normalization

--- a/elasticsearch/src/main/resources/NameEntryElasticSearchSettings.json
+++ b/elasticsearch/src/main/resources/NameEntryElasticSearchSettings.json
@@ -14,9 +14,8 @@
         "filter":[ "standard", "asciifolding", "lowercase", "stop", "edgeNGram" ]
       },
       "asciifolding_analyzer": {
-        "char_filter": ["icu_normalizer"],
         "tokenizer": "standard",
-        "filter":  [ "lowercase", "asciifolding" ]
+        "filter":  [ "lowercase", "icu_normalizer", "icu_folding" ]
       }
     }
   },
