--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <jackson-databind.version>2.6.1</jackson-databind.version>
         <jackson-annotations.version>2.6.1</jackson-annotations.version>
         <ehcache.version>2.10.1</ehcache.version>
+        <hamcrest-all.version>1.3</hamcrest-all.version>
     </properties>
 
     <dependencyManagement>
@@ -194,7 +195,7 @@
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-all</artifactId>
-                <version>1.3</version>
+                <version>${hamcrest-all.version}</version>
                 <scope>test</scope>
             </dependency>
 
