--- a/tts/pom.xml
+++ b/tts/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
+            <version>${hamcrest-all.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
